@startuml 05_sprint1_class_diagram

skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2E74B5
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #F39C12
skinparam linetype ortho

class User {
  + id : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + role : String
  + actif : Boolean
}

class Client {
  + id : String
  + typeClient : String
  + societe : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + adresse : String
  + ville : String
}

class Equipment {
  + id : String
  + reference : String
  + type : String
  + marque : String
  + modele : String
  + numeroSerie : String
}

class EquipmentImage {
  + id : String
  + filename : String
  + isMain : Boolean
}

class ClientEquipement {
  + id : String
  + dateAchat : Date
  + dateInstallation : Date
  + localisation : String
}

class Contract {
  + id : String
  + reference : String
  + dateDebut : Date
  + dateFin : Date
  + periodicite : String
  + statut : String
  + clientEquipementIds : String[]
}

class Intervention {
  + id : String
  + type : String
  + datePrevue : Date
  + statut : String
}

Client      "1"    *--  "*"   ClientEquipement  : possède >
Equipment   "1"    *--  "*"   ClientEquipement  : affecté via >
Equipment   "1"    *--  "*"   EquipmentImage    : possède >
Client      "1"    --   "*"   Contract          : souscrit >
Contract    "*"    --   "*"   ClientEquipement  : couvre
Contract    "0..1" --   "*"   Intervention      : génère >
ClientEquipement "1" <-- "*"  Intervention      : concerne

@enduml
